# test-github-buildx-push

./: BUILD.bazel  Dockerfile  WORKSPACE  docker-compose.yml  go.mod  main  main.go  readme.md
.github/workflows/: artifact.yml  build.yml  test.yml
.nginx/: nginx.conf
ansible/: inventory.ini  updatestage.yml  updatestagewithoutroles.yml
ansible/roles/python/tasks/: python.yml
ansible/roles/tasks/: ansible.yml
docker compose/: docker-compose.yml
