load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_tarball")

# gazelle:prefix github.com/Murawev/test-github-buildx-push
gazelle(name = "gazelle")

go_library(
    name = "test-github-buildx-push_lib",
    srcs = ["main.go"],
    importpath = "github.com/Murawev/test-github-buildx-push",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "test-github-buildx-push",
    embed = [":test-github-buildx-push_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "layer",
    srcs = [":test-github-buildx-push"],
)

oci_image(
    name = "oci",
    base = "@distroless_base_debian12",
    entrypoint = ["/test-github-buildx-push"],
    tars = [":layer"],
    visibility = ["//visibility:public"],
)

oci_tarball(
    name = "tarball",
    image = ":oci",
    repo_tags = ["local/murawev/test-github-buildx-push:latest"],
)

oci_push(
    name = "push",
    image = ":oci",
    repository = "ghcr.io/murawev/test-github-buildx-push",
    remote_tags = ["latest"],
)
